Changes to be committed:
	modified:   .env
	modified:   backend/controllers/auth.controller.js
	new file:   backend/lib/utils/generateToken.js
	modified:   backend/server.js

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@
 
 MONGO_URI=mongodb+srv://wasakodi79:bJvYq0kRsEDq8dAS@cluster0.xojnk.mongodb.net/social-db?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
+JWT_SECRET=lFkl2bt1q0/cotSDyIytcAHygSqHoTHfI3yopVOeyvg=
+NOODE_ENV=development
